<resources>
    <string name="app_name">Codelist.cc App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Codelist.cc App</string>
    <string name="nav_header_subtitle">codez4gods@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="apps_mobile">Apps/Mobile</string>
    <string name="plugins_addons">Plugins/Addons</string>
    <string name="nulled_cms">Nulled Cms</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="no_internet_image">no internet image</string>
    <string name="retry">Retry</string>
</resources>
