<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scripts"
            android:icon="@drawable/ic_menu_manage"
            android:title="Scripts" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/apps_mobile" />
        <item
            android:id="@+id/nav_plugins"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/plugins_addons" />
        <item
            android:id="@+id/nav_cms"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nulled_cms" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
